--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
   "imports": {
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.24.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react-icons/fi": "https://esm.sh/react-icons@5/fi",
-    "react-icons/": "https://aistudiocdn.com/react-icons@^5.5.0/"
+    "react-icons/": "https://aistudiocdn.com/react-icons@^5.5.0/",
+    "deno.ns": "https://aistudiocdn.com/deno.ns@^0.8.0"
   }
 }
 </script>
